--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -138,6 +138,71 @@ body {
     transition: 0.45s;
 }
 
+/* fyp */
+.first-card {
+    background-image: url('../../assets/card-1.png');
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    height: 500px;
+}
+
+.first-card div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 400px;
+}
+
+.card-faq {
+    background-image: url('../../assets/fypl-alsut-trans.png');
+    background-color: #cd7c8b;
+    background-position: center;
+    background-size: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height : 300px;
+}
+
+.card-faq h1 {
+    font-size: 40px;
+    color: white;
+}
+
+.card-faq button {
+    margin-top: 15px;
+    background: none;
+    border: 1px solid white;
+    padding: 10px 20px;
+    border-radius: 20px;
+}
+
+.card-faq button:hover {
+    margin-top: 15px;
+    /* background: none; */
+    background-color: #fefefe;
+    border: 1px solid white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    transition: 0.45s;
+}
+
+.card-faq button a {
+    text-decoration: none;
+    color: white;
+}
+
+.card-faq button:hover a{
+    text-decoration: none;
+    color: #59282b;
+    transition: 0.45s;
+}
+
 /* faq */
 .faq-wrapper h1 {
     text-align: center;
@@ -259,6 +324,25 @@ body {
     border: 1px solid white;
     padding: 10px 20px;
     border-radius: 20px;
+}
+
+/* footer */
+
+footer {
+    background-color: #59282b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    height: 100px;
+}
+
+footer p {
+    color: white;
+}
+
+footer a img {
+    height: 50px;
 }
 
 /* responsive */
