--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -363,6 +363,20 @@ footer a img {
     height: 50px;
 }
 
+@media (max-width: 1024px){
+    .card-faq {
+        background-image: url('../../assets//home-back.png');
+        background-color: #cd7c8b;
+        background-position: 50% 10%;
+        background-size: 1800px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 300px;
+    }
+}
+
 /* responsive */
 @media (max-width : 768px) {
     #resp-nav {
@@ -408,6 +422,31 @@ footer a img {
         color: #fff;
         font-size: 24px;
     }
+
+    .card-faq {
+        background-image: url('../../assets//home-back.png');
+        background-color: #cd7c8b;
+        background-position: 50% 15%;
+        background-size: 1500px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 300px;
+    }
+
+    .card-faq h1 {
+        font-size: 25px;
+        color: white;
+    }
+
+    .card-faq div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0px;
+    }
 }
 
 @media (max-width: 450px) {
@@ -421,6 +460,18 @@ footer a img {
         justify-content: center;
         width: 250px;
         font-size: 15px;
+    }
+
+    .card-faq {
+        background-image: url('../../assets//home-back.png');
+        background-color: #cd7c8b;
+        background-position: 50% -100%;
+        background-size: 1290px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 300px;
     }
 
     .card-faq h1 {
