--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -146,7 +146,7 @@ body {
 
 .card-faq {
     background-image: url('../../assets//home-back.png');
-    background-color: #cd7c8b;
+    background-color: #59282b;
     background-position: 50% 25%;
     background-size: cover;
     display: flex;
@@ -154,6 +154,8 @@ body {
     align-items: center;
     justify-content: center;
     height : 300px;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
 }
 
 .card-faq div {
@@ -356,7 +358,7 @@ footer a img {
 @media (max-width: 1024px){
     .card-faq {
         background-image: url('../../assets//home-back.png');
-        background-color: #cd7c8b;
+        background-color: #59282b;
         background-position: 50% 10%;
         background-size: 1800px;
         display: flex;
@@ -364,6 +366,8 @@ footer a img {
         align-items: center;
         justify-content: center;
         height: 300px;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
     }
 }
 
@@ -415,7 +419,7 @@ footer a img {
 
     .card-faq {
         background-image: url('../../assets//home-back.png');
-        background-color: #cd7c8b;
+        background-color: #59282b;
         background-position: 50% 15%;
         background-size: 1500px;
         display: flex;
@@ -423,6 +427,8 @@ footer a img {
         align-items: center;
         justify-content: center;
         height: 300px;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
     }
 
     .card-faq h1 {
@@ -454,7 +460,7 @@ footer a img {
 
     .card-faq {
         background-image: url('../../assets//home-back.png');
-        background-color: #cd7c8b;
+        background-color: #59282b;
         background-position: 50% -100%;
         background-size: 1290px;
         display: flex;
