--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -158,6 +158,31 @@ body {
     width: 400px;
 }
 
+.first-card div button {
+    margin-top: 15px;
+    background: none;
+    /* background-color: #fefefe; */
+    border: 1px solid white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    transition: 0.45s;
+    color: white;
+    width: 110px;
+}
+
+.first-card div button:hover {
+    margin-top: 15px;
+    /* background: none; */
+    background-color: #fefefe;
+    border: 1px solid white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    transition: 0.45s;
+    color: #59282b;
+    width: 110px;
+    cursor: pointer;
+}
+
 .testimonial {
     background-color: #59282b;
     padding-top: 50px;
@@ -168,6 +193,10 @@ body {
     justify-content: center;
     color: white;
     border-top: 1px solid white;
+}
+
+.testimonial p {
+    margin-top: 10px;
 }
 
 .testimonial .card-testi{
@@ -410,6 +439,11 @@ footer a img {
     }
 
     .testimonial h1{
+        margin-bottom: 0px;
+    }
+
+    .testimonial p {
+        margin-top: 10px;
         margin-bottom: 25px;
     }
     
@@ -501,6 +535,11 @@ footer a img {
     }
 
     .testimonial h1{
+        margin-bottom: 0px;
+    }
+
+    .testimonial p {
+        margin-top: 10px;
         margin-bottom: 25px;
     }
     
@@ -557,7 +596,12 @@ footer a img {
     }
 
     .testimonial h1{
-        margin-bottom: 25px;
+        margin-bottom: 0px;
+    }
+
+    .testimonial p {
+        margin-top: 10px;
+        margin-bottom: 5px;
     }
     
     .testimonial .card-testi{
@@ -571,6 +615,10 @@ footer a img {
     
     .testimonial .card-testi img {
         height: 170px;
+    }
+
+    body > div.testimonial > div > img:nth-child(1) {
+        margin-top: 25px;
     }
 
     footer {
