--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -413,8 +413,9 @@ body {
 
 .container-fypl {
     background-image: url(../../assets/bg_move.png);
-    background-size: 1440px;
+    background-size: 1150px;
     /* margin-top: 50px; */
+    padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
