--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -409,6 +409,7 @@ body {
     background-position: center;
     background-size: cover;
     height: 600px;
+    border-bottom: 1px solid white;
 }
 
 .container-fypl {
