--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -149,6 +149,7 @@ body {
     justify-content: center;
     color: white;
     height: 500px;
+    border-bottom: 1px solid white;
 }
 
 .first-card div {
@@ -188,14 +189,15 @@ body {
     width: 100%;
     /* max-width: 600px; */
     padding: 0 20px;
-  }
+
+}
   
   .timeline-line {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     width: 2px;
-    height: 100%;
+    height: 90%;
     background-color: rgba(255, 255, 255, 0.3);
     z-index: 1;
   }
@@ -246,6 +248,12 @@ body {
     color: rgba(255, 255, 255, 0.5);
     margin-top: 2px;
   }
+
+.timeline-container .timeline-end {
+
+    margin-bottom: 100px;
+
+}
 
 .testimonial {
     background-color: #59282b;
@@ -323,6 +331,16 @@ body {
 
 .card-faq button a {
     text-decoration: none;
+    color: white;
+}
+
+.timeline-container .title-timeline {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+    gap: 10px;
     color: white;
 }
 
