--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -558,6 +558,33 @@ body {
     object-position: 0 10%;
 }
 
+.confetti-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 10;
+}
+
+.confetti {
+    position: absolute;
+    opacity: 0;
+    z-index: 11;
+}
+
+@keyframes fall {
+    0% {
+        opacity: 1;
+        transform: translate(var(--start-x), var(--start-y)) scale(0.5) rotate(0deg);
+    }
+    100% {
+        opacity: 0;
+        transform: translate(var(--end-x), var(--end-y)) scale(1) rotate(var(--rotation));
+    }
+}
+
 body > div:nth-child(14) {
     padding-bottom: 30px;
 }
