--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -6,15 +6,15 @@
 }
 
 body {
-    background-image: url('../../assets/bg_move.png');
-    background-size: cover;
-    background-position: center center;
-    background-color: #59282b;
-    height: 100vh;
-    background-repeat: repeat-x;
-    background-size: cover;
-    animation: moveBackground 10s linear infinite;
-    overflow-x: hidden;
+  background-image: url("../../assets/bg_move.png");
+  background-size: cover;
+  background-position: center center;
+  background-color: #59282b;
+  height: 100vh;
+  background-repeat: repeat-x;
+  background-size: cover;
+  animation: moveBackground 10s linear infinite;
+  overflow-x: hidden;
 }
 
 /* .moving-background {
@@ -141,15 +141,15 @@ body {
 
 /* fyp */
 .first-card {
-    background-image: url('../../assets/card-1.png');
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    height: 500px;
-    border-bottom: 1px solid white;
+  background-image: url("../../assets/card-1.png");
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  height: 500px;
+  border-bottom: 1px solid white;
 }
 
 .first-card div {
@@ -189,20 +189,31 @@ body {
   align-items: center;
   min-height: 80vh;
   padding: 20px;
-  background-image: url("../../assets/bg_move.png");
-  background-size: 1200px;
+  background-image: url("../assets/bg_move.png");
   animation: moveBackground 10s linear infinite;
+  background-size: 1200px;
 }
 
 .timeline-container {
-    /* background-color: #59282b; */
-    background-image: url('../../assets/bg_move.png');
-    background-size: 1000px;
-    position: relative;
-    width: 100%;
-    /* max-width: 600px; */
-    padding: 0 20px;
-    animation: moveBackground 10s linear infinite;
+  position: relative;
+  max-width: 500px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.timeline-title {
+  font-size: 5rem;
+  font-weight: bold;
+  line-height: 0.9;
+  position: relative;
+  text-transform: lowercase;
+  color: white;
+  margin-right: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
 }
 
 .timeline-title span {
@@ -331,17 +342,17 @@ body {
 }
 
 .card-faq {
-    background-image: url('../../assets//home-back.png');
-    background-color: #59282b;
-    background-position: 50% 25%;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height : 300px;
-    border-top: 1px solid white;
-    /* border-bottom: 1px solid white; */
+  background-image: url("../../assets//home-back.png");
+  background-color: #59282b;
+  background-position: 50% 25%;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  border-top: 1px solid white;
+  /* border-bottom: 1px solid white; */
 }
 
 .card-faq div {
@@ -533,25 +544,25 @@ body {
 
 /* fypl */
 .main-card-fypl {
-    background-image: url('../../assets/main-card-fypl.png');
-    background-position: center;
-    background-size: cover;
-    height: 600px;
-    border-bottom: 1px solid white;
+  background-image: url("../../assets/main-card-fypl.png");
+  background-position: center;
+  background-size: cover;
+  height: 600px;
+  border-bottom: 1px solid white;
 }
 
 .container-fypl {
-    background-image: url(../../assets/bg_move.png);
-    background-size: 1255px;
-    /* margin-top: 50px; */
-    padding-top: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    gap: 5px;
-    animation: moveBackground 10s linear infinite;
+  background-image: url(../../assets/bg_move.png);
+  background-size: 1255px;
+  /* margin-top: 50px; */
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  gap: 5px;
+  animation: moveBackground 10s linear infinite;
 }
 
 @keyframes moveBackground {
@@ -704,20 +715,20 @@ footer a img {
   height: 50px;
 }
 
-@media (max-width: 1024px){
-    .card-faq {
-        background-image: url('../../assets//home-back.png');
-        background-color: #59282b;
-        background-position: 50% 10%;
-        background-size: 1800px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 300px;
-        border-top: 1px solid white;
-        /* border-bottom: 1px solid white; */
-    }
+@media (max-width: 1024px) {
+  .card-faq {
+    background-image: url("../../assets//home-back.png");
+    background-color: #59282b;
+    background-position: 50% 10%;
+    background-size: 1800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
+    border-top: 1px solid white;
+    /* border-bottom: 1px solid white; */
+  }
 
   .testimonial h1 {
     margin-bottom: 0px;
@@ -741,12 +752,12 @@ footer a img {
     height: 300px;
   }
 
-    .main-card-fypl {
-        background-image: url('../../assets/main-card-fypl.png');
-        background-position: center;
-        background-size: cover;
-        height: 400px;
-    }
+  .main-card-fypl {
+    background-image: url("../../assets/main-card-fypl.png");
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+  }
 }
 
 /* responsive */
@@ -795,19 +806,19 @@ footer a img {
     font-size: 24px;
   }
 
-    .card-faq {
-        background-image: url('../../assets//home-back.png');
-        background-color: #59282b;
-        background-position: 50% 15%;
-        background-size: 1500px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 300px;
-        border-top: 1px solid white;
-        /* border-bottom: 1px solid white; */
-    }
+  .card-faq {
+    background-image: url("../../assets//home-back.png");
+    background-color: #59282b;
+    background-position: 50% 15%;
+    background-size: 1500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
+    border-top: 1px solid white;
+    /* border-bottom: 1px solid white; */
+  }
 
   .card-faq h1 {
     font-size: 25px;
@@ -844,12 +855,27 @@ footer a img {
     height: 300px;
   }
 
-    .main-card-fypl {
-        background-image: url('../../assets/main-card-fypl.png');
-        background-position: center;
-        background-size: cover;
-        height: 300px;
-    }
+  .main-card-fypl {
+    background-image: url("../../assets/main-card-fypl.png");
+    background-position: center;
+    background-size: cover;
+    height: 300px;
+  }
+
+  .timeline-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .timeline-title {
+    margin-right: 0;
+    margin-bottom: 20px;
+    flex-direction: row;
+  }
+
+  .timeline-title span {
+    margin-right: 5px;
+  }
 }
 
 @media (max-width: 450px) {
@@ -857,17 +883,17 @@ footer a img {
     font-size: 28px;
   }
 
-    body {
-        background-image: url('../../assets/bg_move.png');
-        background-size: cover;
-        background-position: 50% 65%;
-        background-color: #59282b;
-        height: 100%;
-        /* overflow: hidden; */
-        background-repeat: repeat-x;
-        background-size: cover;
-        animation: moveBackground 10s linear infinite;
-    }
+  body {
+    background-image: url("../../assets/bg_move.png");
+    background-size: cover;
+    background-position: 50% 65%;
+    background-color: #59282b;
+    height: 100%;
+    /* overflow: hidden; */
+    background-repeat: repeat-x;
+    background-size: cover;
+    animation: moveBackground 10s linear infinite;
+  }
 
   @keyframes moveBackground {
     from {
@@ -886,17 +912,17 @@ footer a img {
     font-size: 15px;
   }
 
-    .card-faq {
-        background-image: url('../../assets//home-back.png');
-        background-color: #59282b;
-        background-position: 50% -100%;
-        background-size: 1290px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 300px;
-    }
+  .card-faq {
+    background-image: url("../../assets//home-back.png");
+    background-color: #59282b;
+    background-position: 50% -100%;
+    background-size: 1290px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
+  }
 
   .card-faq h1 {
     font-size: 25px;
@@ -937,12 +963,12 @@ footer a img {
     margin-top: 25px;
   }
 
-    .main-card-fypl {
-        background-image: url('../../assets/main-card-fypl.png');
-        background-position: center;
-        background-size: cover;
-        height: 180px;
-    }
+  .main-card-fypl {
+    background-image: url("../../assets/main-card-fypl.png");
+    background-position: center;
+    background-size: cover;
+    height: 180px;
+  }
 
   .container-fypl .card-fypl {
     display: flex;
@@ -970,10 +996,10 @@ footer a img {
     align-items: center;
     min-height: 70vh;
     padding: 20px;
-    background-image: url("../../assets/bg_move.png");
+    background-image: url("../assets/bg_move.png");
     background-size: 1200px;
     animation: moveBackground 10s linear infinite;
-}
+  }
 
   footer {
     background-color: #59282b;
