--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -141,7 +141,7 @@ body {
 
 /* fyp */
 .first-card {
-  background-image: url("../../assets/card-1.png");
+  background-image: url("./assets/card-1.png");
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -360,7 +360,7 @@ body {
 }
 
 .card-faq {
-  background-image: url("../../assets//home-back.png");
+  background-image: url("./assets//home-back.png");
   background-color: #59282b;
   background-position: 50% 25%;
   background-size: cover;
@@ -562,7 +562,7 @@ body {
 
 /* fypl */
 .main-card-fypl {
-  background-image: url("../../assets/main-card-fypl.png");
+  background-image: url("./assets/main-card-fypl.png");
   background-position: center;
   background-size: cover;
   height: 600px;
@@ -570,7 +570,7 @@ body {
 }
 
 .container-fypl {
-  background-image: url(../../assets/bg_move.png);
+  background-image: url(./assets/bg_move.png);
   background-size: 1255px;
   /* margin-top: 50px; */
   padding-top: 50px;
@@ -735,7 +735,7 @@ footer a img {
 
 @media (max-width: 1024px) {
   .card-faq {
-    background-image: url("../../assets//home-back.png");
+    background-image: url("./assets//home-back.png");
     background-color: #59282b;
     background-position: 50% 10%;
     background-size: 1800px;
@@ -771,7 +771,7 @@ footer a img {
   }
 
   .main-card-fypl {
-    background-image: url("../../assets/main-card-fypl.png");
+    background-image: url("./assets/main-card-fypl.png");
     background-position: center;
     background-size: cover;
     height: 400px;
@@ -825,7 +825,7 @@ footer a img {
   }
 
   .card-faq {
-    background-image: url("../../assets//home-back.png");
+    background-image: url("./assets//home-back.png");
     background-color: #59282b;
     background-position: 50% 15%;
     background-size: 1500px;
@@ -874,7 +874,7 @@ footer a img {
   }
 
   .main-card-fypl {
-    background-image: url("../../assets/main-card-fypl.png");
+    background-image: url("./assets/main-card-fypl.png");
     background-position: center;
     background-size: cover;
     height: 300px;
@@ -902,7 +902,7 @@ footer a img {
   }
 
   body {
-    background-image: url("../../assets/bg_move.png");
+    background-image: url("./assets/bg_move.png");
     background-size: cover;
     background-position: 50% 65%;
     background-color: #59282b;
