--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -141,7 +141,7 @@ body {
 
 /* fyp */
 .first-card {
-  background-image: url("./assets/card-1.png");
+  /* background-image: url("./assets/card-1.png"); */
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -946,6 +946,20 @@ footer a img {
     font-size: 24px;
   }
 
+  .first-card {
+    /* background-image: url("./assets/card-1.png"); */
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    height: 500px;
+    border-bottom: 1px solid white;
+    background-position: center;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
   .card-faq {
     background-image: url("./assets//home-back.png");
     background-color: #59282b;
@@ -1050,6 +1064,20 @@ footer a img {
 }
 
 @media (max-width: 450px) {
+  .first-card {
+    /* background-image: url("./assets/card-1.png"); */
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    height: 500px;
+    border-bottom: 1px solid white;
+    background-position: center;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
   .title-home h1 {
     font-size: 28px;
   }
