--- a/FYP-web/Homepage/style.css
+++ b/FYP-web/Homepage/style.css
@@ -605,6 +605,7 @@ body {
   box-sizing: border-box;
   position: relative;
   background-image: url("./assets/bg_move.png");
+  animation: moveBackground 10s linear infinite;
   background-size: 1255px;
   color: white;
 }
@@ -613,7 +614,7 @@ body {
 .carousel-nav {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-5%);
   background-color: rgba(0, 0, 0, 0);
   color: white;
   border: none;
@@ -622,15 +623,21 @@ body {
   height: 50px;
   font-size: 30px;
   cursor: pointer;
-  z-index: 10;
+  /* z-index: 10; */
   display: flex;
   align-items: center;
   justify-content: center;
   transition: background-color 0.3s ease;
 }
 
+.carousel-nav p{
+  transform: translateY(-11%);
+  font-size: larger;
+}
+
 .carousel-nav:hover {
   background-color: #59282b;
+  /* background-color: red; */
 }
 
 .carousel-nav.prev {
@@ -714,7 +721,7 @@ body {
 .fypl-solo img,
 .fypl-left img,
 .fypl-right img {
-  height: 300px;
+  height: 350px;
   border-radius: 10px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -727,17 +734,19 @@ body {
 }
 
 .container-fypl h1 {
-  margin-top: 5px;
+  padding-top: 5px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  margin-bottom: 5px;
-  font-size: 32px;
+  padding-bottom: 5px;
+  font-size: 48px;
   /* text-transform: lowercase; */
+  
 }
 
 .container-fypl p {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   margin-top: 8px;
   margin-bottom: 15px;
+  font-size: 2.5vh;
 }
 
 body > div:nth-child(1) > div.carousel > div:nth-child(10) > div > div {
